# shadcn-rs

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  README.pt-BR.md  README.ru.md  deny.toml
.github/workflows/: rust.yml
crates/egui-shadcn/: Cargo.toml  README.md  README.pt-BR.md  README.ru.md  build.rs
crates/egui-shadcn/assets/icons/shadcn-egui/: icon.icns
crates/egui-shadcn/examples/_shared/: icon.rs  logging.rs  screenshot.rs  windows_subsystem.rs
crates/egui-shadcn/examples/accordion/: README.md  main.rs
crates/egui-shadcn/examples/alert/: main.rs
crates/egui-shadcn/examples/alert_dialog/: main.rs
crates/egui-shadcn/examples/aspect_ratio/: main.rs
crates/egui-shadcn/examples/avatar/: main.rs
crates/egui-shadcn/examples/badge/: main.rs
crates/egui-shadcn/examples/basic/: README.md  main.rs
crates/egui-shadcn/examples/breadcrumb/: main.rs
crates/egui-shadcn/examples/button/: README.md  main.rs
crates/egui-shadcn/examples/button_group/: main.rs
crates/egui-shadcn/examples/calendar/: README.md  main.rs
crates/egui-shadcn/examples/card/: README.md  main.rs
crates/egui-shadcn/examples/carousel/: main.rs
crates/egui-shadcn/examples/chart/: main.rs
crates/egui-shadcn/examples/checkbox/: README.md  main.rs
crates/egui-shadcn/examples/collapsible/: README.md  main.rs
crates/egui-shadcn/examples/combobox/: README.md  main.rs
crates/egui-shadcn/examples/command/: dialog.rs  main.rs
crates/egui-shadcn/examples/context_menu/: main.rs
crates/egui-shadcn/examples/data_table/: main.rs
crates/egui-shadcn/examples/date_picker/: README.md  main.rs
crates/egui-shadcn/examples/dialog/: README.md  main.rs
crates/egui-shadcn/examples/dropdown_menu/: main.rs
crates/egui-shadcn/examples/form/: main.rs
crates/egui-shadcn/examples/hover_card/: main.rs
crates/egui-shadcn/examples/input/: README.md  main.rs
crates/egui-shadcn/examples/input_otp/: main.rs
crates/egui-shadcn/examples/label/: README.md  main.rs
crates/egui-shadcn/examples/navigation_menu/: main.rs
crates/egui-shadcn/examples/pagination/: main.rs
crates/egui-shadcn/examples/popover/: README.md  main.rs
crates/egui-shadcn/examples/progress/: main.rs
crates/egui-shadcn/examples/radio/: README.md  main.rs
crates/egui-shadcn/examples/resizable/: main.rs
crates/egui-shadcn/examples/scroll_area/: README.md  main.rs
crates/egui-shadcn/examples/select/: README.md  main.rs
crates/egui-shadcn/examples/separator/: README.md  main.rs
crates/egui-shadcn/examples/sheet/: main.rs
crates/egui-shadcn/examples/sidebar/: main.rs
crates/egui-shadcn/examples/skeleton/: main.rs
crates/egui-shadcn/examples/slider/: README.md  main.rs
crates/egui-shadcn/examples/spinner/: README.md  main.rs
crates/egui-shadcn/examples/switch/: README.md  main.rs
crates/egui-shadcn/examples/table/: main.rs
crates/egui-shadcn/examples/tabs/: README.md  main.rs
crates/egui-shadcn/examples/text_input/: README.md  main.rs
crates/egui-shadcn/examples/textarea/: README.md  main.rs
crates/egui-shadcn/examples/toast/: main.rs
crates/egui-shadcn/examples/toggle/: README.md  main.rs
crates/egui-shadcn/examples/toggle_group/: main.rs
crates/egui-shadcn/examples/tooltip/: README.md  main.rs
crates/egui-shadcn/examples/typography/: README.md  main.rs
crates/egui-shadcn/src/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  data_table.rs  date_picker.rs  dialog.rs  dropdown_menu.rs  form.rs  hover_card.rs  icons.rs  input.rs  input_otp.rs  label.rs  lib.rs  menu_primitives.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  (+15 more)
crates/egui-shadcn/tests/: accordion_tests.rs  button_tests.rs  card_tests.rs  checkbox_tests.rs  collapsible_tests.rs  components.rs  dialog_api_tests.rs  input_tests.rs  label_api_tests.rs  label_tests.rs  lib_tests.rs  radio_tests.rs  resizable_tests.rs  scroll_area_tests.rs  select_compliance_tests.rs  select_tests.rs  separator_tests.rs  spinner_tests.rs  structural_tests.rs  switch_tests.rs  tabs_tests.rs  textarea_tests.rs  theme_tests.rs  toggle_tests.rs  tokens_shadcn_theming_tests.rs  tokens_tests.rs  tooltip_compliance_tests.rs  tooltip_tests.rs  typography_tests.rs
crates/iced-shadcn/: Cargo.toml  README.md  README.pt-BR.md  README.ru.md
crates/iced-shadcn/assets/icons/shadcn-iced/: icon.icns
crates/iced-shadcn/examples/button/: main.rs
crates/iced-shadcn/examples/carousel/: main.rs
crates/iced-shadcn/examples/checkbox/: main.rs
crates/iced-shadcn/examples/input/: main.rs
crates/iced-shadcn/examples/label/: main.rs
crates/iced-shadcn/examples/radio/: main.rs
crates/iced-shadcn/examples/select/: main.rs
crates/iced-shadcn/examples/separator/: main.rs
crates/iced-shadcn/examples/slider/: main.rs
crates/iced-shadcn/examples/spinner/: main.rs
crates/iced-shadcn/examples/switch/: main.rs
crates/iced-shadcn/examples/textarea/: main.rs
crates/iced-shadcn/examples/typography/: main.rs
crates/iced-shadcn/src/: accent_palette.rs  button.rs  carousel.rs  checkbox.rs  input.rs  label.rs  lib.rs  radio.rs  select.rs  separator.rs  slider.rs  spinner.rs  switch.rs  textarea.rs  theme.rs  tokens.rs  typography.rs
