[workspace]
members = ["crates/egui-shadcn"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["FerrisMind"]
repository = "https://github.com/FerrisMind/shadcn-rs"
description = "Shadcn and Radix UI-inspired component library for the Rust GUI (egui)"

[workspace.dependencies]
egui = "0.33"
log = "0.4"
env_logger = "0.11"

[profile.dev]
incremental = true
opt-level = 1
debug = 1

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
