[package]
name = "egui-shadcn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shadcn-inspired component kit for egui"
authors = ["FerrisMind"]
repository = "https://github.com/FerrisMind/shadcn-rs"
homepage = "https://github.com/FerrisMind/shadcn-rs"
readme = "README.md"
documentation = "https://docs.rs/egui-shadcn"
keywords = ["egui", "ui", "components", "shadcn", "radix"]
categories = ["gui", "visualization", "rendering::graphics-api", "game-development"]
build = "build.rs"


[features]
default = []
examples = []

[dependencies]
egui = { workspace = true }
log = { workspace = true }
lucide-icons = "0.555.0"

[dev-dependencies]
env_logger = { workspace = true }
eframe = "0.33"
rfd = "0.16"

[build-dependencies]
winres = "0.1"

[[example]]
name = "button"
path = "examples/button/main.rs"
required-features = ["examples"]

[[example]]
name = "checkbox"
path = "examples/checkbox/main.rs"
required-features = ["examples"]

[[example]]
name = "input"
path = "examples/input/main.rs"
required-features = ["examples"]

[[example]]
name = "label"
path = "examples/label/main.rs"
required-features = ["examples"]

[[example]]
name = "radio"
path = "examples/radio/main.rs"
required-features = ["examples"]

[[example]]
name = "scroll_area"
path = "examples/scroll_area/main.rs"
required-features = ["examples"]

[[example]]
name = "select"
path = "examples/select/main.rs"
required-features = ["examples"]

[[example]]
name = "switch"
path = "examples/switch/main.rs"
required-features = ["examples"]

[[example]]
name = "textarea"
path = "examples/textarea/main.rs"
required-features = ["examples"]

[[example]]
name = "toggle"
path = "examples/toggle/main.rs"
required-features = ["examples"]

[[example]]
name = "tooltip"
path = "examples/tooltip/main.rs"
required-features = ["examples"]
