[package]
name = "egui-shadcn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shadcn-inspired component kit for egui"
authors = ["FerrisMind"]
repository = "https://github.com/FerrisMind/shadcn-rs"
homepage = "https://github.com/FerrisMind/shadcn-rs"
readme = "README.md"
documentation = "https://docs.rs/egui-shadcn"
keywords = ["egui", "ui", "components", "shadcn", "radix"]
categories = ["gui", "visualization", "rendering::graphics-api", "game-development"]

include = [
    "src/**/*",
    "Cargo.toml",
    "/README.md",
    "LICENSE*",
]



[dependencies]
egui = { workspace = true }
log = { workspace = true }
lucide-icons = { workspace = true }
chrono = "0.4"
regex = "1.11"
egui_plot = { version = "0.34", optional = true }

[dev-dependencies]
env_logger = { workspace = true }
eframe = "0.33"
rfd = "0.16"

[build-dependencies]
winres = "0.1"

[features]
plot = ["egui_plot"]

[[example]]
name = "command_dialog"
path = "examples/command/dialog.rs"
