[package]
name = "iced-shadcn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shadcn-inspired component kit for iced"

[dependencies]
iced = { version = "0.14", features = ["advanced", "canvas", "tokio"] }
lucide-icons = { version = "0.562", features = ["iced"] }
num-traits = "0.2"

[dev-dependencies]
rfd = "0.16"
